# system-optimization-portfolio-research

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html
final_project/findings/2026-04-23-context-aware-grand-study/: EXHAUSTIVE_NEXT_EXPERIMENT.md  FINDINGS.md  HIERARCHICAL_RL_ROUTING_BRIEF.md  INTEGRATED_RL_STUDY_BRIEF.md  META_CONTROLLER_RESEARCH_DESIGN.md  PAPER_INTEGRATION_MEMO.md  README.md  SCREENED_CORE_REPORTING_BRIEF.md  pyproject.toml
final_project/findings/2026-04-23-context-aware-grand-study/metrics/: all_trials.csv  candidate_controller_ranks.csv  candidate_winners.csv  consolidated_candidate_summary.csv  controller_ablation_summary.csv  cost_sensitivity.csv  deflated_sharpe_summary.csv  descriptor_feature_summary_all.csv  empirical_rigor_artifact_checklist.csv  gross_vs_net_summary.csv  hierarchical_rl_router_summary.csv  integrated_rl_study_baselines.csv  integrated_rl_study_best_by_scope.csv  integrated_rl_study_config_summary.csv  integrated_rl_study_trials.csv  integrated_rl_study_win_rates.csv  meta_controller_summary.csv  model_selection_ledger.csv  modern_literature_map.csv  multiple_testing_summary.csv  rl_context_equity.csv  rl_context_pilot.csv  rl_training_curve.csv  screen_ablation_summary.csv  screen_membership_concentration.csv  screened_core_all_trials.csv  screened_core_membership.csv  screened_core_model_selection_ledger.csv  screened_core_subperiod_summary.csv  screened_core_summary.csv  screened_universe_screen_winners.csv  screened_universe_winners.csv  summary.csv  turnover_summary.csv  universe_provenance.csv  (+2 more)
(+122 files in other folders)
